--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.9.5",
@@ -18,10 +15,14 @@
     "@material-ui/lab": "^4.0.0-alpha.45",
     "babel-plugin-emotion": "^10.0.29",
     "formik": "^2.2.1",
+    "next": "10.0.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@types/node": "^14.0.1",
+    "@prisma/cli": "^2.10.1",
+    "@types/node": "^14.14.6",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/yup": "^0.29.8",
@@ -34,6 +35,7 @@
     "eslint-plugin-react": "^7.20.0",
     "firebase-tools": "^8.3.0",
     "prettier": "^2.0.5",
-    "typescript": "3.9.2"
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
   }
 }
