--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "next-prisma",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,6 +14,7 @@
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.45",
+    "@prisma/client": "^2.10.1",
     "babel-plugin-emotion": "^10.0.29",
     "formik": "^2.2.1",
     "next": "10.0.0",
