--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "strict": true,
   "compilerOptions": {
     "target": "es2018",
-    "module": "esnext",
+    "module": "umd",
     "sourceMap": true,
     "outDir": "dist",
     "lib": [
@@ -17,7 +17,6 @@
     "noEmit": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "baseUrl": "./",
