--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/lab": "^4.0.0-alpha.45",
     "@prisma/client": "^2.10.1",
     "babel-plugin-emotion": "^10.0.29",
+    "firebase": "^7.11.0",
     "formik": "^2.2.1",
     "next": "10.0.0",
     "react": "17.0.1",
