--- a/functions/package.json
+++ b/functions/package.json
@@ -10,20 +10,18 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "12"
+    "node": "10"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@prisma/client": "^2.10.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.8.0",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "^2.22.0",
-    "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "@prisma/cli": "^2.10.1",
+    "firebase-functions-test": "^0.2.0",
+    "firebase-tools": "^8.15.1"
   },
   "private": true
 }
