--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.45",
     "babel-plugin-emotion": "^10.0.29",
+    "dayjs": "^1.9.5",
     "firebase": "^7.11.0",
     "formik": "^2.2.1",
     "next": "10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "superjson": "^1.4.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/yup": "^0.29.8",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
+    "babel-plugin-superjson-next": "^0.1.8",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
