--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-emotion": "^10.0.29",
     "firebase": "^7.11.0",
     "formik": "^2.2.1",
+    "formik-material-ui": "^3.0.0",
     "next": "10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
