--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "superjson": "^1.4.0",
+    "swr": "^0.3.8",
     "yup": "^0.29.3"
   },
   "devDependencies": {
